# oopsla-2022-artifact

./: .gitignore  404.html  GETTING-STARTED.md  README.md  STEP-BY-STEP.md  _config.yml  boxing.md  capability.md  casestudies.html  generate-documentation.sh  index.html  index.md  intro.md  package-lock.json  paper.html  webpack.config.js
_includes/: head.html
boxing/: index.html
capability/: index.html
coq/: .coqdeps.d  .gitignore  Atom.v  CaptureSets.v  Dockerfile  FSetDecide.v  Label.v  Makefile  Makefile.conf  Makefile.coq  README.md  Rho_Definitions.v  Rho_Infrastructure.v  Rho_Lemmas.v  Rho_Soundness.v  SystemC_Examples.v  SystemC_Infrastructure.v  SystemC_Lemmas.v  SystemC_Soundness.v  SystemC_Substitution.v  _CoqProject  proofs.opam
coq/SystemC/: CaptureSets.v  Definitions.v  Examples.v  Infrastructure.v  Lemmas.v  Soundness.v  Substitution.v
coq/Util/: AdditionalTactics.v  Atom.v  Environment.v  FSetDecide.v  FSetNotin.v  FiniteSets.v  Label.v  ListFacts.v  Metatheory.v  Nat.v  Signatures.v  Taktiks.v
coq/extra/: header.demo.html  header.html
coq/extra/resources/: config.js  coqdoc.css
coq/html/: Top.SystemC.CaptureSets.html  Top.SystemC.Definitions.html  Top.SystemC.Infrastructure.html  Top.SystemC.Lemmas.html  Top.SystemC.Soundness.html  Top.SystemC.Substitution.html  Top.Util.AdditionalTactics.html  Top.Util.Environment.html  Top.Util.FSetNotin.html  Top.Util.ListFacts.html  Top.Util.Metatheory.html  Top.Util.Nat.html  Top.Util.Taktiks.html  indexpage.html
coq/src/: FiniteSets.v  Rho_Examples.v  Rho_Substitution.v  Signatures.v  Taktiks.v
(+137 files in other folders)
